--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <h2>Disclaimer</h2>
     <p>This is a demo for now. The link creator is missing crucial affiliation information to really support ICW.</p>
-    <p>Creator: hztirf, Jan 2/2024</p>
+    <p>Contributors: <a href="https://github.com/hztirf">hztirf</a> & <a href="https://github.com/DJToTheK">DJToTheK</a>, Jan 2/2024</p>
     
     <h2>Input section</h2>
 
