Integrate check, that number is larger than zero and an integer

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         }
         
         function isNumber(value) {
-            return !isNaN(parseFloat(value)) && isFinite(value);
+            return !isNaN(parseFloat(value)) && isFinite(value) && Number.isInteger(parseFloat(value)) && parseFloat(value) > 0;
         }
         
         function copyToClipboard() {
