--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Create eBay affiliate link to support ICW</h1>
     
     <h2>Disclaimer</h2>
-    <p>This is a demo for now. The link creator is missing crucial affiliation information to really support ICW.</p>
+    <p>This is a demo for now.</p>
     <p>Contributors: <a href="https://github.com/hztirf">hztirf</a> & <a href="https://github.com/DJToTheK">DJToTheK</a>, Jan 2/2024</p>
     
     <h2>Input section</h2>
@@ -43,9 +43,9 @@
     <script>
         function okButtonClicked() {
             const ebay_link = "https://www.ebay.com/itm/"
-            const ebay_affiliate_id = "1234567890"
+            const ebay_affiliate_id = "5335842975"
             const ebay_network_id = "9"
-            const ebay_custom_id = ""
+            const ebay_custom_id = "ICWEBAYBBLINK"
             if (ebay_custom_id.length > 0) {
             	var ebay_affiliate_info = "?affiliate.trackingId=" + ebay_affiliate_id + "&affiliate.networkId=" + ebay_network_id + "&affiliate.customId=" + ebay_custom_id;
             } else {
