--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <h1>Create eBay affiliate link to support ICW</h1>
     
     <h2>Disclaimer</h2>
-    <p>This is a demo for now.</p>
-    <p>Contributors: <a href="https://github.com/hztirf">hztirf</a> & <a href="https://github.com/DJToTheK">DJToTheK</a>, Jan 2/2024</p>
+    <p>Feel free to use.</p>
+    <p>Contributors: <a href="https://github.com/hztirf">hztirf</a> & <a href="https://github.com/DJToTheK">DJToTheK</a>, Jan 4/2024</p>
+    <p>Source code can be retrieved here: <a href="https://github.com/hztirf/affiliation-bblink-creator">https://github.com/hztirf/affiliation-bblink-creator</a></p>
     
     <h2>Input section</h2>
 
